api/tests/integration/snapshots/r#mod__integration__pipelines_test__all_pipelines_can_be_read-2.snap
---
source: api/tests/integration/pipelines_test.rs
expression: pipeline.config
---
PipelineConfig {
    publication_name: "updated_publication",
    batch: Some(
        BatchConfig {
            max_size: 2000,
            max_fill_ms: 10,
        },
    ),
    apply_worker_init_retry: Some(
        RetryConfig {
            max_attempts: 10,
            initial_delay_ms: 2000,
            max_delay_ms: 4000,
            backoff_factor: 1.0,
        },
    ),
}
