api/tests/integration/snapshots/r#mod__integration__pipelines_test__pipeline_config_can_be_updated-3.snap
---
source: api/tests/integration/pipelines_test.rs
expression: response.config
---
PipelineConfig {
    publication_name: "publication",
    batch: Some(
        BatchConfig {
            max_size: 10000,
            max_fill_ms: 100,
        },
    ),
    apply_worker_init_retry: Some(
        RetryConfig {
            max_attempts: 10,
            initial_delay_ms: 1000,
            max_delay_ms: 5000,
            backoff_factor: 3.0,
        },
    ),
    max_table_sync_workers: Some(
        8,
    ),
}
